--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -3,6 +3,8 @@ plugins {
 	id 'org.springframework.boot' version '2.6.0'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id "io.github.http-builder-ng.http-plugin" version "0.1.1"
+	
 }
 
 group = 'com.example'
@@ -20,11 +22,40 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.spockframework:spock-spring:2.1-M2-groovy-3.0'
 	testImplementation 'org.spockframework:spock-core:2.1-M2-groovy-3.0'
-
-	implementation 'org.codehaus.groovy:groovy-all:2.4.21'
+	implementation 'org.codehaus.groovy:groovy-all:3.0.0'
+	
+	//implementation 'org.codehaus.groovy:groovy-all:2.4.21'
 	
 }
 
 test {
 	useJUnitPlatform()
 }
+
+task custom{
+	group 'Custom'
+	doLast {
+		println 'This is my first custom task'
+	}
+}
+//import groovyx.net.http.HttpBuilder
+//
+//task makeRESTCall {
+//onlyIf {
+//	!dependencyList.empty
+//}
+//doFirst {
+//	println dependencyList
+//	def http = HttpBuilder.configure {
+//		request.uri = 'http://localhost:8080'
+//		request.contentType = 'application/json'
+//		request.uri.path = '/register'
+//	}
+//	http.post {
+//		request.body=dependencyList
+//		response.success {
+//			println "Success"
+//		}
+//	}
+//}
+//}
